# motplayer

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  VideoDisplayWidget.cpp  VideoDisplayWidget.h  VideoProcessor.cpp  VideoProcessor.h  main.cpp
